--- a/new_example.ipynb
+++ b/new_example.ipynb
@@ -2,225 +2,97 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
-    "from runway_new import fetch_html, extract_data"
+    "import numpy as np\n",
+    "from runway_new import fetch_html, extract_data, parse_data, TABLE_NAME, TABLE_DEF, INDEX_DEF\n",
+    "from db import init_schema, check_table_exists, create_table, SCHEMA_NAME, DB_CREDENTIALS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "item_id = '0224600001'\n",
     "html = fetch_html(item_id)\n",
-    "data = extract_data(html)"
+    "data = extract_data(html)\n",
+    "df = parse_data(item_id, data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'name': '【３次追加受注承り中】2WAYカラーレディコート',\n",
-       "  'brand': 'dazzlin',\n",
-       "  'original_price': '19800',\n",
-       "  'current_price': '19800',\n",
-       "  'currency': 'JPY',\n",
-       "  'color': 'アイボリー',\n",
-       "  'size': 'M',\n",
-       "  'status': 'SOLD OUT'},\n",
-       " {'name': '【３次追加受注承り中】2WAYカラーレディコート',\n",
-       "  'brand': 'dazzlin',\n",
-       "  'original_price': '19800',\n",
-       "  'current_price': '19800',\n",
-       "  'currency': 'JPY',\n",
-       "  'color': 'チャコールグレー',\n",
-       "  'size': 'M',\n",
-       "  'status': 'SOLD OUT'},\n",
-       " {'name': '【３次追加受注承り中】2WAYカラーレディコート',\n",
-       "  'brand': 'dazzlin',\n",
-       "  'original_price': '19800',\n",
-       "  'current_price': '19800',\n",
-       "  'currency': 'JPY',\n",
-       "  'color': 'ブラック',\n",
-       "  'size': 'M',\n",
-       "  'status': 'SOLD OUT'},\n",
-       " {'name': '【３次追加受注承り中】2WAYカラーレディコート',\n",
-       "  'brand': 'dazzlin',\n",
-       "  'original_price': '19800',\n",
-       "  'current_price': '19800',\n",
-       "  'currency': 'JPY',\n",
-       "  'color': 'ピンク',\n",
-       "  'size': 'M',\n",
-       "  'status': 'SOLD OUT'},\n",
-       " {'name': '【３次追加受注承り中】2WAYカラーレディコート',\n",
-       "  'brand': 'dazzlin',\n",
-       "  'original_price': '19800',\n",
-       "  'current_price': '19800',\n",
-       "  'currency': 'JPY',\n",
-       "  'color': 'パープル',\n",
-       "  'size': 'M',\n",
-       "  'status': 'SOLD OUT'},\n",
-       " {'name': '【３次追加受注承り中】2WAYカラーレディコート',\n",
-       "  'brand': 'dazzlin',\n",
-       "  'original_price': '19800',\n",
-       "  'current_price': '19800',\n",
-       "  'currency': 'JPY',\n",
-       "  'color': 'モカ',\n",
-       "  'size': 'M',\n",
-       "  'status': '在庫あり'}]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data"
+    "init_schema()\n",
+    "if not check_table_exists(TABLE_NAME):\n",
+    "    create_table(TABLE_NAME, TABLE_DEF, INDEX_DEF)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_data(table_name: str, df: pd.DataFrame) -> None:\n",
+    "    df = df.replace({np.nan: None})\n",
+    "    value_sqls = []\n",
+    "    for _, row in df.replace({np.nan: None}).iterrows():\n",
+    "        value_sql = []\n",
+    "        for col_name, dtype in TABLE_DEF.items():\n",
+    "            if col_name.startswith('PRIMARY KEY'):\n",
+    "                continue\n",
+    "            elif row[col_name] is None:\n",
+    "                value_sql.append('NULL')\n",
+    "            elif dtype.startswith(('TEXT', 'TIME', 'DATE')):\n",
+    "                value_sql.append(f\"'{row[col_name]}'\")\n",
+    "            elif dtype.startswith('BOOL'):\n",
+    "                value_sql.append(f\"{row[col_name]}\".upper())\n",
+    "            else:\n",
+    "                value_sql.append(str(row[col_name]))\n",
+    "        value_sqls.append('(' + ', '.join(value_sql) + ')')\n",
+    "    return ',\\n'.join(value_sqls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>original_price</th>\n",
-       "      <th>current_price</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>color</th>\n",
-       "      <th>size</th>\n",
-       "      <th>status</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>【３次追加受注承り中】2WAYカラーレディコート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>アイボリー</td>\n",
-       "      <td>M</td>\n",
-       "      <td>SOLD OUT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>【３次追加受注承り中】2WAYカラーレディコート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>チャコールグレー</td>\n",
-       "      <td>M</td>\n",
-       "      <td>SOLD OUT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>【３次追加受注承り中】2WAYカラーレディコート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>ブラック</td>\n",
-       "      <td>M</td>\n",
-       "      <td>SOLD OUT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>【３次追加受注承り中】2WAYカラーレディコート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>ピンク</td>\n",
-       "      <td>M</td>\n",
-       "      <td>SOLD OUT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>【３次追加受注承り中】2WAYカラーレディコート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>パープル</td>\n",
-       "      <td>M</td>\n",
-       "      <td>SOLD OUT</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>【３次追加受注承り中】2WAYカラーレディコート</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>19800</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>モカ</td>\n",
-       "      <td>M</td>\n",
-       "      <td>在庫あり</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       name    brand original_price current_price currency  \\\n",
-       "0  【３次追加受注承り中】2WAYカラーレディコート  dazzlin          19800         19800      JPY   \n",
-       "1  【３次追加受注承り中】2WAYカラーレディコート  dazzlin          19800         19800      JPY   \n",
-       "2  【３次追加受注承り中】2WAYカラーレディコート  dazzlin          19800         19800      JPY   \n",
-       "3  【３次追加受注承り中】2WAYカラーレディコート  dazzlin          19800         19800      JPY   \n",
-       "4  【３次追加受注承り中】2WAYカラーレディコート  dazzlin          19800         19800      JPY   \n",
-       "5  【３次追加受注承り中】2WAYカラーレディコート  dazzlin          19800         19800      JPY   \n",
-       "\n",
-       "      color size    status  \n",
-       "0     アイボリー    M  SOLD OUT  \n",
-       "1  チャコールグレー    M  SOLD OUT  \n",
-       "2      ブラック    M  SOLD OUT  \n",
-       "3       ピンク    M  SOLD OUT  \n",
-       "4      パープル    M  SOLD OUT  \n",
-       "5        モカ    M      在庫あり  "
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'S', TRUE, 2.0, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
+      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'M', TRUE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001')\n"
+     ]
     }
    ],
    "source": [
-    "pd.DataFrame.from_records(data)"
+    "print(insert_data(TABLE_NAME, df))"
    ]
   },
   {
