--- a/new_example.ipynb
+++ b/new_example.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from runway_new import fetch_html, extract_data, parse_data, TABLE_NAME, TABLE_DEF, INDEX_DEF\n",
-    "from db import init_schema, check_table_exists, create_table, SCHEMA_NAME, DB_CREDENTIALS"
+    "from runway_new import *\n",
+    "from db import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,62 +37,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'M', TRUE, 2.0, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001');\""
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def insert_data(table_name: str, df: pd.DataFrame) -> None:\n",
-    "    df = df.replace({np.nan: None})\n",
-    "    value_sqls = []\n",
-    "    for _, row in df.replace({np.nan: None}).iterrows():\n",
-    "        value_sql = []\n",
-    "        for col_name, dtype in TABLE_DEF.items():\n",
-    "            if col_name.startswith('PRIMARY KEY'):\n",
-    "                continue\n",
-    "            elif row[col_name] is None:\n",
-    "                value_sql.append('NULL')\n",
-    "            elif dtype.startswith(('TEXT', 'TIME', 'DATE')):\n",
-    "                value_sql.append(f\"'{row[col_name]}'\")\n",
-    "            elif dtype.startswith('BOOL'):\n",
-    "                value_sql.append(f\"{row[col_name]}\".upper())\n",
-    "            else:\n",
-    "                value_sql.append(str(row[col_name]))\n",
-    "        value_sqls.append('(' + ', '.join(value_sql) + ')')\n",
-    "    return ',\\n'.join(value_sqls)"
+    "insert_data(TABLE_NAME, TABLE_DEF, df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'S', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'M', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'XS', FALSE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'S', TRUE, 2.0, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\n",
-      "('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'M', TRUE, NULL, '2024-12-07 22:47:33.685016+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(insert_data(TABLE_NAME, df))"
+    "query_data(\n",
+    "    f\"\"\"\n",
+    "    SELECT\n",
+    "        *\n",
+    "    FROM\n",
+    "        {SCHEMA_NAME}.{TABLE_NAME}\n",
+    "    \"\"\",\n",
+    "    DTYPES\n",
+    ")"
    ]
   },
   {
