--- a/new_example.ipynb
+++ b/new_example.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "item_id = '0224600001'\n",
+    "item_id = '0224608001'\n",
     "html = fetch_html(item_id)\n",
     "data = extract_data(html)\n",
     "df = parse_data(item_id, data)"
@@ -39,27 +39,185 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'アイボリー', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'チャコールグレー', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ブラック', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'ピンク', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'パープル', 'M', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'XS', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'S', FALSE, NULL, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001'),\\n('0224600001', '【３次追加受注承り中】2WAYカラーレディコート', 'dazzlin', 19800.0, 19800.0, 'JPY', 'モカ', 'M', TRUE, 2.0, '2024-12-08 20:08:10.011631+00:00', 'https://runway-webstore.com/ap/item/i/m/0224600001');\""
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "insert_data(TABLE_NAME, TABLE_DEF, df)"
+    "insert_data(SCHEMA_NAME, TABLE_NAME, TABLE_DEF, df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>original_price</th>\n",
+       "      <th>current_price</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>color</th>\n",
+       "      <th>size</th>\n",
+       "      <th>is_available</th>\n",
+       "      <th>unit_left</th>\n",
+       "      <th>asof</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0224608001</td>\n",
+       "      <td>バリエコンパクトミニスカート</td>\n",
+       "      <td>dazzlin</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>JPY</td>\n",
+       "      <td>ブラック</td>\n",
+       "      <td>S</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0224608001</td>\n",
+       "      <td>バリエコンパクトミニスカート</td>\n",
+       "      <td>dazzlin</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>JPY</td>\n",
+       "      <td>ブラック</td>\n",
+       "      <td>M</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0224608001</td>\n",
+       "      <td>バリエコンパクトミニスカート</td>\n",
+       "      <td>dazzlin</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>JPY</td>\n",
+       "      <td>レッド</td>\n",
+       "      <td>S</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0224608001</td>\n",
+       "      <td>バリエコンパクトミニスカート</td>\n",
+       "      <td>dazzlin</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>JPY</td>\n",
+       "      <td>レッド</td>\n",
+       "      <td>M</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0224608001</td>\n",
+       "      <td>バリエコンパクトミニスカート</td>\n",
+       "      <td>dazzlin</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>JPY</td>\n",
+       "      <td>ベージュ</td>\n",
+       "      <td>S</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0224608001</td>\n",
+       "      <td>バリエコンパクトミニスカート</td>\n",
+       "      <td>dazzlin</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>9900.0</td>\n",
+       "      <td>JPY</td>\n",
+       "      <td>ベージュ</td>\n",
+       "      <td>M</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      item_id            name    brand  original_price  current_price  \\\n",
+       "0  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "1  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "2  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "3  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "4  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "5  0224608001  バリエコンパクトミニスカート  dazzlin          9900.0         9900.0   \n",
+       "\n",
+       "  currency color size  is_available  unit_left  \\\n",
+       "0      JPY  ブラック    S         False        NaN   \n",
+       "1      JPY  ブラック    M         False        NaN   \n",
+       "2      JPY   レッド    S         False        NaN   \n",
+       "3      JPY   レッド    M         False        NaN   \n",
+       "4      JPY  ベージュ    S          True        NaN   \n",
+       "5      JPY  ベージュ    M         False        NaN   \n",
+       "\n",
+       "                              asof  \\\n",
+       "0 2024-12-11 18:17:25.867027+00:00   \n",
+       "1 2024-12-11 18:17:25.867027+00:00   \n",
+       "2 2024-12-11 18:17:25.867027+00:00   \n",
+       "3 2024-12-11 18:17:25.867027+00:00   \n",
+       "4 2024-12-11 18:17:25.867027+00:00   \n",
+       "5 2024-12-11 18:17:25.867027+00:00   \n",
+       "\n",
+       "                                                 url  \n",
+       "0  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "1  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "2  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "3  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "4  https://runway-webstore.com/ap/item/i/m/022460...  \n",
+       "5  https://runway-webstore.com/ap/item/i/m/022460...  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "query_data(\n",
     "    f\"\"\"\n",
@@ -71,13 +229,6 @@
     "    DTYPES\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
