--- a/new_example.ipynb
+++ b/new_example.ipynb
@@ -37,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "insert_data(SCHEMA_NAME, TABLE_NAME, TABLE_DEF, df)"
+    "insert_data(TABLE_NAME, TABLE_DEF, df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +97,7 @@
        "      <td>S</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>2024-12-11 23:49:29.708300+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -112,7 +112,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>2024-12-11 23:49:29.708300+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -127,7 +127,7 @@
        "      <td>S</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>2024-12-11 23:49:29.708300+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -142,7 +142,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>2024-12-11 23:49:29.708300+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -157,7 +157,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>2024-12-11 23:49:29.708300+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -172,7 +172,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-11 18:17:25.867027+00:00</td>\n",
+       "      <td>2024-12-11 23:49:29.708300+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022460...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -197,12 +197,12 @@
        "5      JPY  ベージュ    M         False        NaN   \n",
        "\n",
        "                              asof  \\\n",
-       "0 2024-12-11 18:17:25.867027+00:00   \n",
-       "1 2024-12-11 18:17:25.867027+00:00   \n",
-       "2 2024-12-11 18:17:25.867027+00:00   \n",
-       "3 2024-12-11 18:17:25.867027+00:00   \n",
-       "4 2024-12-11 18:17:25.867027+00:00   \n",
-       "5 2024-12-11 18:17:25.867027+00:00   \n",
+       "0 2024-12-11 23:49:29.708300+00:00   \n",
+       "1 2024-12-11 23:49:29.708300+00:00   \n",
+       "2 2024-12-11 23:49:29.708300+00:00   \n",
+       "3 2024-12-11 23:49:29.708300+00:00   \n",
+       "4 2024-12-11 23:49:29.708300+00:00   \n",
+       "5 2024-12-11 23:49:29.708300+00:00   \n",
        "\n",
        "                                                 url  \n",
        "0  https://runway-webstore.com/ap/item/i/m/022460...  \n",
@@ -213,7 +213,7 @@
        "5  https://runway-webstore.com/ap/item/i/m/022460...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,6 +229,13 @@
     "    DTYPES\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
