--- a/example.ipynb
+++ b/example.ipynb
@@ -30,9 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "init_schema()\n",
-    "if not check_table_exists(TABLE_NAME):\n",
-    "    create_table(TABLE_NAME, TABLE_DEF, INDEX_DEF)"
+    "init_schema()"
    ]
   },
   {
@@ -41,12 +39,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "insert_data(TABLE_NAME, TABLE_DEF, df)"
+    "if not check_table_exists(TABLE_NAME):\n",
+    "    create_table(TABLE_NAME, TABLE_DEF, INDEX_DEF)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "insert_data(TABLE_NAME, TABLE_DEF, df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +106,7 @@
        "      <td>XS</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:13:36.588855+00:00</td>\n",
+       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -112,7 +121,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:13:36.588855+00:00</td>\n",
+       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -127,7 +136,7 @@
        "      <td>M</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:13:36.588855+00:00</td>\n",
+       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -142,7 +151,7 @@
        "      <td>XS</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:13:36.588855+00:00</td>\n",
+       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -157,7 +166,7 @@
        "      <td>S</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:13:36.588855+00:00</td>\n",
+       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -172,7 +181,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:13:36.588855+00:00</td>\n",
+       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -187,7 +196,7 @@
        "      <td>XS</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:13:36.588855+00:00</td>\n",
+       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -202,7 +211,7 @@
        "      <td>S</td>\n",
        "      <td>True</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:13:36.588855+00:00</td>\n",
+       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -217,7 +226,7 @@
        "      <td>M</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:13:36.588855+00:00</td>\n",
+       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
        "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -248,15 +257,15 @@
        "8      JPY    グリーン    M         False        NaN   \n",
        "\n",
        "                              asof  \\\n",
-       "0 2024-12-14 20:13:36.588855+00:00   \n",
-       "1 2024-12-14 20:13:36.588855+00:00   \n",
-       "2 2024-12-14 20:13:36.588855+00:00   \n",
-       "3 2024-12-14 20:13:36.588855+00:00   \n",
-       "4 2024-12-14 20:13:36.588855+00:00   \n",
-       "5 2024-12-14 20:13:36.588855+00:00   \n",
-       "6 2024-12-14 20:13:36.588855+00:00   \n",
-       "7 2024-12-14 20:13:36.588855+00:00   \n",
-       "8 2024-12-14 20:13:36.588855+00:00   \n",
+       "0 2024-12-14 20:57:27.835806+00:00   \n",
+       "1 2024-12-14 20:57:27.835806+00:00   \n",
+       "2 2024-12-14 20:57:27.835806+00:00   \n",
+       "3 2024-12-14 20:57:27.835806+00:00   \n",
+       "4 2024-12-14 20:57:27.835806+00:00   \n",
+       "5 2024-12-14 20:57:27.835806+00:00   \n",
+       "6 2024-12-14 20:57:27.835806+00:00   \n",
+       "7 2024-12-14 20:57:27.835806+00:00   \n",
+       "8 2024-12-14 20:57:27.835806+00:00   \n",
        "\n",
        "                                                 url  \n",
        "0  https://runway-webstore.com/ap/item/i/m/022510...  \n",
@@ -270,7 +279,7 @@
        "8  https://runway-webstore.com/ap/item/i/m/022510...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
