--- a/example.ipynb
+++ b/example.ipynb
@@ -2,306 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from runway import *\n",
-    "from db import *"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "item_id = '0225103023'\n",
-    "html = fetch_html(item_id)\n",
-    "data = extract_data(html)\n",
-    "df = parse_data(item_id, data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "init_schema()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if not check_table_exists(TABLE_NAME):\n",
-    "    create_table(TABLE_NAME, TABLE_DEF, INDEX_DEF)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "insert_data(TABLE_NAME, TABLE_DEF, df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>item_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>original_price</th>\n",
-       "      <th>current_price</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>color</th>\n",
-       "      <th>size</th>\n",
-       "      <th>is_available</th>\n",
-       "      <th>unit_left</th>\n",
-       "      <th>asof</th>\n",
-       "      <th>url</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0225103023</td>\n",
-       "      <td>バックリボンティアードコンビワンピース</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>オフホワイト</td>\n",
-       "      <td>XS</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0225103023</td>\n",
-       "      <td>バックリボンティアードコンビワンピース</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>オフホワイト</td>\n",
-       "      <td>S</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0225103023</td>\n",
-       "      <td>バックリボンティアードコンビワンピース</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>オフホワイト</td>\n",
-       "      <td>M</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0225103023</td>\n",
-       "      <td>バックリボンティアードコンビワンピース</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>ブラック</td>\n",
-       "      <td>XS</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0225103023</td>\n",
-       "      <td>バックリボンティアードコンビワンピース</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>ブラック</td>\n",
-       "      <td>S</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0225103023</td>\n",
-       "      <td>バックリボンティアードコンビワンピース</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>ブラック</td>\n",
-       "      <td>M</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0225103023</td>\n",
-       "      <td>バックリボンティアードコンビワンピース</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>グリーン</td>\n",
-       "      <td>XS</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0225103023</td>\n",
-       "      <td>バックリボンティアードコンビワンピース</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>グリーン</td>\n",
-       "      <td>S</td>\n",
-       "      <td>True</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0225103023</td>\n",
-       "      <td>バックリボンティアードコンビワンピース</td>\n",
-       "      <td>dazzlin</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>14300.0</td>\n",
-       "      <td>JPY</td>\n",
-       "      <td>グリーン</td>\n",
-       "      <td>M</td>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2024-12-14 20:57:27.835806+00:00</td>\n",
-       "      <td>https://runway-webstore.com/ap/item/i/m/022510...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      item_id                 name    brand  original_price  current_price  \\\n",
-       "0  0225103023  バックリボンティアードコンビワンピース  dazzlin         14300.0        14300.0   \n",
-       "1  0225103023  バックリボンティアードコンビワンピース  dazzlin         14300.0        14300.0   \n",
-       "2  0225103023  バックリボンティアードコンビワンピース  dazzlin         14300.0        14300.0   \n",
-       "3  0225103023  バックリボンティアードコンビワンピース  dazzlin         14300.0        14300.0   \n",
-       "4  0225103023  バックリボンティアードコンビワンピース  dazzlin         14300.0        14300.0   \n",
-       "5  0225103023  バックリボンティアードコンビワンピース  dazzlin         14300.0        14300.0   \n",
-       "6  0225103023  バックリボンティアードコンビワンピース  dazzlin         14300.0        14300.0   \n",
-       "7  0225103023  バックリボンティアードコンビワンピース  dazzlin         14300.0        14300.0   \n",
-       "8  0225103023  バックリボンティアードコンビワンピース  dazzlin         14300.0        14300.0   \n",
-       "\n",
-       "  currency   color size  is_available  unit_left  \\\n",
-       "0      JPY  オフホワイト   XS          True        NaN   \n",
-       "1      JPY  オフホワイト    S          True        NaN   \n",
-       "2      JPY  オフホワイト    M          True        NaN   \n",
-       "3      JPY    ブラック   XS         False        NaN   \n",
-       "4      JPY    ブラック    S         False        NaN   \n",
-       "5      JPY    ブラック    M         False        NaN   \n",
-       "6      JPY    グリーン   XS         False        NaN   \n",
-       "7      JPY    グリーン    S          True        NaN   \n",
-       "8      JPY    グリーン    M         False        NaN   \n",
-       "\n",
-       "                              asof  \\\n",
-       "0 2024-12-14 20:57:27.835806+00:00   \n",
-       "1 2024-12-14 20:57:27.835806+00:00   \n",
-       "2 2024-12-14 20:57:27.835806+00:00   \n",
-       "3 2024-12-14 20:57:27.835806+00:00   \n",
-       "4 2024-12-14 20:57:27.835806+00:00   \n",
-       "5 2024-12-14 20:57:27.835806+00:00   \n",
-       "6 2024-12-14 20:57:27.835806+00:00   \n",
-       "7 2024-12-14 20:57:27.835806+00:00   \n",
-       "8 2024-12-14 20:57:27.835806+00:00   \n",
-       "\n",
-       "                                                 url  \n",
-       "0  https://runway-webstore.com/ap/item/i/m/022510...  \n",
-       "1  https://runway-webstore.com/ap/item/i/m/022510...  \n",
-       "2  https://runway-webstore.com/ap/item/i/m/022510...  \n",
-       "3  https://runway-webstore.com/ap/item/i/m/022510...  \n",
-       "4  https://runway-webstore.com/ap/item/i/m/022510...  \n",
-       "5  https://runway-webstore.com/ap/item/i/m/022510...  \n",
-       "6  https://runway-webstore.com/ap/item/i/m/022510...  \n",
-       "7  https://runway-webstore.com/ap/item/i/m/022510...  \n",
-       "8  https://runway-webstore.com/ap/item/i/m/022510...  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['0224600001', '0224608001', '519850129859551965196511236368', '0024626006', '0223518002', '0024603001', '0024403005', '0225103023']\n"
+     ]
     }
    ],
    "source": [
-    "query_data(\n",
-    "    f\"\"\"\n",
-    "    SELECT\n",
-    "        *\n",
-    "    FROM\n",
-    "        {SCHEMA_NAME}.{TABLE_NAME}\n",
-    "    \"\"\",\n",
-    "    DTYPES\n",
-    ")"
+    "import yaml\n",
+    "\n",
+    "# Open and read the YAML file\n",
+    "with open('configs/runway.yaml', 'r') as file:\n",
+    "    data = yaml.safe_load(file)\n",
+    "\n",
+    "# Print the parsed data\n",
+    "print(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
